--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.4.1",
     "react-native": "0.42.0",
+    "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
