--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-saga": "^0.14.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
