--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
     "react-native-svg": "^5.1.5",
     "react-native-vector-icons": "^4.0.0",
