--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
     "react-native-svg": "^5.1.5",
+    "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
