--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "~15.4.1",
     "react-native": "0.42.0",
     "react-native-drawer": "^2.3.0",
+    "react-native-lazyload": "^1.1.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
     "react-native-router-flux": "^3.38.0",
