--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -140,6 +140,8 @@ dependencies {
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.facebook.stetho:stetho:1.4.2'
+
+    compile files('libs/aacdecoder-android-0.8.jar')
 }
 
 // Run this once to be able to run the application with BUCK
