--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-material-ui": "^1.8.0",
     "react-native-pulse": "^1.0.4",
     "react-native-router-flux": "^3.38.0",
+    "react-native-slider": "^0.9.1",
     "react-native-svg": "^5.1.5",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
