--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.42.0",
     "react-native-drawer": "^2.3.0",
     "react-native-lazyload": "^1.1.0",
+    "react-native-linear-gradient": "^2.0.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
     "react-native-pulse": "^1.0.4",
