--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
     "react-native-svg": "^5.1.5",
+    "react-native-swipe-list-view": "^0.4.1",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
