--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
     "react-redux": "^5.0.3",
+    "react-timer-mixin": "^0.13.3",
     "redux": "^3.6.0",
     "redux-saga": "^0.14.3"
   },
