--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-pulse": "^1.0.4",
     "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
+    "react-native-splash-screen": "^2.0.0",
     "react-native-svg": "^5.1.5",
     "react-native-swipe-list-view": "^0.4.1",
     "react-native-swiper": "^1.5.4",
