--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
     "react-native-pulse": "^1.0.4",
+    "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
     "react-native-splash-screen": "^2.0.0",
-    "react-native-svg": "^5.1.5",
+    "react-native-svg": "^5.1.7",
     "react-native-swipe-list-view": "^0.4.1",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
