--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-linear-gradient": "^2.0.0",
     "react-native-material-kit": "^0.4.1",
     "react-native-material-ui": "^1.8.0",
+    "react-native-progress": "^3.2.1",
     "react-native-pulse": "^1.0.4",
     "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
