--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "~15.4.1",
     "react-native": "0.42.0",
+    "react-native-audio": "^3.2.2",
     "react-native-drawer": "^2.3.0",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^2.0.0",
@@ -18,6 +19,7 @@
     "react-native-pulse": "^1.0.4",
     "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
+    "react-native-sound": "^0.10.3",
     "react-native-splash-screen": "^2.0.0",
     "react-native-svg": "^5.1.7",
     "react-native-swipe-list-view": "^0.4.1",
