--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -144,6 +144,8 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-sound')
+    compile project(':react-native-audio')
     compile project(':react-native-splash-screen')
     compile project(':react-native-linear-gradient')
     compile project(':react-native-material-kit')
