--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.42.0",
     "react-native-audio": "^3.2.2",
     "react-native-drawer": "^2.3.0",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-lazyload": "^1.1.0",
     "react-native-linear-gradient": "^2.0.0",
     "react-native-material-kit": "^0.4.1",
