--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "~15.4.1",
-    "react-native": "0.42.0",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0",
     "react-native-audio": "^3.2.2",
+    "react-native-deprecated-custom-components": "^0.1.1",
     "react-native-drawer": "^2.3.0",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-lazyload": "^1.1.0",
@@ -21,8 +22,9 @@
     "react-native-router-flux": "^3.38.0",
     "react-native-slider": "^0.9.1",
     "react-native-sound": "^0.10.3",
+    "react-native-spinkit": "1.1.1",
     "react-native-splash-screen": "^2.0.0",
-    "react-native-svg": "^5.1.7",
+    "react-native-svg": "5.1.8",
     "react-native-swipe-list-view": "^0.4.1",
     "react-native-swiper": "^1.5.4",
     "react-native-vector-icons": "^4.0.0",
